# usfftrecon

./: .gitignore  .loglogin  MANIFEST.txt  README.md  requirements.txt  setup.py
src/cuda/: CMakeLists.txt  radonusfft.cu  radonusfft.i
src/include/: kernels.cuh  radonusfft.cuh
src/usfftrecon/: __init__.py  solver_tomo.py
tests/: test_adjoint.py  test_perf.py  test_recon.py  test_tomo.py
tests/perf/: 4xTeslaP100NVlink  4xTeslaV100PCI  8xGeForceRTX2080  8xGeForceRTX2080PCI
